<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/background">
    
    <!-- Верхняя панель  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/header_backgroud"
        app:layout_constraintBottom_toTopOf="@+id/headerDevideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/flaskIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00000000"
            android:scaleType="centerCrop"
            android:src="@drawable/flask"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/titleTextGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/titleTextGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/flaskIcon"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_protext_regular"
                android:text="@string/header_title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/titleSubtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_subtitle"
                style="@style/SecondaryText"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#00000000"
            android:scaleType="center"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_history2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:backgroundTint="#00000000"
            android:scaleType="center"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Разделительная линия под шапкой -->
    <View
        android:id="@+id/headerDevideLine"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/devide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerContainer" />

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="29dp"
            android:background="@drawable/shape_blocks"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/connectionContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerDevideLine">

            <TextView
                android:id="@+id/infoTitleText"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/main_welcome_title" />

            <TextView
                android:id="@+id/infoSubtitleText"
                style="@style/SecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/main_welcome_description" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/connectionContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_blocks"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoContainer">

            <TextView
                android:id="@+id/connectionTitle"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/status_title"
                app:layout_constraintBottom_toTopOf="@+id/connectionStatusText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/connectionIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:maxHeight="50dp"
                android:src="@drawable/ic_server"
                app:layout_constraintBottom_toBottomOf="@+id/connectionTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/cyan" />

            <ImageView
                android:id="@+id/connectionStatusCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle"
                app:layout_constraintEnd_toStartOf="@+id/connectionStatusText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectionTitle"/>

            <TextView
                android:id="@+id/connectionStatusText"
                style="@style/BaseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/sf_protext_medium"
                android:text="@string/status_disconnected"
                app:layout_constraintBottom_toTopOf="@id/connectionButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/connectionStatusCircle"
                app:layout_constraintTop_toBottomOf="@+id/connectionTitle"></TextView>

            <Button
                android:id="@+id/connectionButton"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_biruza"
                android:text="@string/action_connect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectionStatusCircle"></Button>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currentProgramContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_blocks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connectionContainer">

            <TextView
                android:id="@+id/currentProgramTitle"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_program_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/currentProgramIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:maxHeight="50dp"
                android:src="@drawable/ic_pulse"
                app:layout_constraintBottom_toBottomOf="@+id/currentProgramTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/cyan" />

            <TextView
                android:id="@+id/currentProgramName"
                style="@style/BaseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/sf_protext_semibold"
                tools:text="ACTH(1-24)"
                app:layout_constraintBottom_toTopOf="@+id/currentProgramLastUpdateText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentProgramTitle" />

            <TextView
                android:id="@+id/currentProgramLastUpdateText"
                style="@style/BaseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/last_update_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentProgramName" />

            <TextView
                android:id="@+id/currentProgramLastUpdateDate"
                style="@style/SecondaryText"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/sf_protext_semibold"
                android:text="@string/last_update_date"
                android:textSize="14dp"
                app:flow_horizontalAlign="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/currentProgramLastUpdateText"
                app:layout_constraintTop_toTopOf="@+id/currentProgramLastUpdateText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newSynthesisButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sf_protext_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_new_synthesis"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/cyan"

            app:cornerRadius="10dp"
            app:icon="@drawable/ic_molnia"
            app:iconGravity="textEnd"
            app:iconPadding="6dp"
            app:iconSize="28sp"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentProgramContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/rightMenuContainer"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:background="@color/background"
        android:paddingTop="56dp"
        android:paddingBottom="24dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:elevation="12dp">

        <TextView
            android:id="@+id/rightMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/sf_protext_bold"
            android:textColor="@color/cyan" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rightMenuMain"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_protext_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_item_main"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="viewStart"
            app:backgroundTint="@color/cyan"

            app:cornerRadius="10dp"
            app:icon="@drawable/ic_home"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:iconSize="22sp"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_protext_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_item_training"
            android:textColor="@color/textSecondary"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:backgroundTint="#00000000"

            app:cornerRadius="10dp"
            app:icon="@drawable/ic_book"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:iconSize="22sp"
            app:iconTint="@color/textSecondary"
            android:id="@+id/rightMenuTraining"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_protext_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_item_synthesis"
            android:textColor="@color/textSecondary"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:backgroundTint="#00000000"

            app:cornerRadius="10dp"
            app:icon="@drawable/flask"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:iconSize="22sp"
            app:iconTint="@color/textSecondary"
            android:id="@+id/rightMenuSynthesis"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_protext_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_item_info_contacts"
            android:textColor="@color/textSecondary"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:backgroundTint="#00000000"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_info"
            app:iconGravity="textStart"
            app:iconPadding="6dp"
            app:iconSize="22sp"
            app:iconTint="@color/textSecondary"
            android:id="@+id/rightMenuInfoContacts"/>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>